syntax = "proto3";

package order;

import "libs/proto/common.proto";

service OrderService {
    rpc createOrder(CreateOrderInterface) returns (CreateOrderResponse);
    rpc getOrderList(common.Empty) returns (GetOrderListResponse);
}

message CreateOrderInterface {
    string customerId = 1;
    string goldGrams = 2;
    int32 amount = 3;
}

message CreateOrderResponse {
    OrderType data = 1;
    bool success = 2;
    common.ErrorInterface error = 3;
}

message GetOrderListResponse {
    repeated OrderType data = 1;
    bool success = 2;
    common.ErrorInterface error = 3;
}

message OrderType {
    string id = 1;
    string createdAt = 2;
    string updatedAt = 3;
    string customerId = 4;
    string goldGrams = 5;
    int32 amount = 6;
    int32 gramPrice = 7;
    int32 totalPrice = 8;
};
